src/test/deca/codegen/valid/readany/minus_floatvar_readint_minus_float_codegen.deca
// Description :
//
//      Test contextuellement correct de la soustraction d'un readInt et d'un float dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y= readInt()- 3.5;
    print(y);
}