src/test/deca/codegen/invalid/minus_minus_overflow.deca
// Description :
//
//      Test de programme contextuellement incorrect d'une soustractionn de deux entiers menant à un overflow.
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 06/06/2023 par gl03

{ 
    int y =2-99999999999;
}